@@ -1295,6 +1295,15 @@ argument_list|()
 expr_stmt|;
 name|nmd
 operator|.
+name|description
+operator|=
+name|md
+operator|.
+name|getDescription
+argument_list|()
+expr_stmt|;
+name|nmd
+operator|.
 name|lastModified
 operator|=
 name|md
@@ -1423,6 +1432,12 @@ comment|// List(License)
 specifier|private
 name|String
 name|homePage
+decl_stmt|;
+specifier|private
+name|String
+name|description
+init|=
+literal|""
 decl_stmt|;
 specifier|private
 name|long
@@ -2693,6 +2708,30 @@ operator|.
 name|homePage
 operator|=
 name|homePage
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getDescription
+parameter_list|()
+block|{
+return|return
+name|description
+return|;
+block|}
+specifier|public
+name|void
+name|setDescription
+parameter_list|(
+name|String
+name|description
+parameter_list|)
+block|{
+name|this
+operator|.
+name|description
+operator|=
+name|description
 expr_stmt|;
 block|}
 specifier|public
