@@ -1182,6 +1182,38 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|setHomePage
+parameter_list|(
+name|String
+name|homePage
+parameter_list|)
+block|{
+name|ivyModuleDescriptor
+operator|.
+name|setHomePage
+argument_list|(
+name|homePage
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setDescription
+parameter_list|(
+name|String
+name|description
+parameter_list|)
+block|{
+name|ivyModuleDescriptor
+operator|.
+name|setDescription
+argument_list|(
+name|description
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|addArtifact
 parameter_list|(
 name|String
