@@ -717,6 +717,26 @@ argument_list|,
 name|version
 argument_list|)
 expr_stmt|;
+name|mdBuilder
+operator|.
+name|setHomePage
+argument_list|(
+name|domReader
+operator|.
+name|getHomePage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|mdBuilder
+operator|.
+name|setDescription
+argument_list|(
+name|domReader
+operator|.
+name|getDescription
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|ModuleRevisionId
 name|relocation
 init|=
