@@ -318,6 +318,22 @@ specifier|private
 specifier|static
 specifier|final
 name|String
+name|DESCRIPTION
+init|=
+literal|"description"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|HOMEPAGE
+init|=
+literal|"url"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
 name|PARENT
 init|=
 literal|"parent"
@@ -796,6 +812,71 @@ expr_stmt|;
 block|}
 return|return
 name|val
+return|;
+block|}
+specifier|public
+name|String
+name|getHomePage
+parameter_list|()
+block|{
+name|String
+name|val
+init|=
+name|getFirstChildText
+argument_list|(
+name|projectElement
+argument_list|,
+name|HOMEPAGE
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|==
+literal|null
+condition|)
+block|{
+name|val
+operator|=
+literal|""
+expr_stmt|;
+block|}
+return|return
+name|val
+return|;
+block|}
+specifier|public
+name|String
+name|getDescription
+parameter_list|()
+block|{
+name|String
+name|val
+init|=
+name|getFirstChildText
+argument_list|(
+name|projectElement
+argument_list|,
+name|DESCRIPTION
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|==
+literal|null
+condition|)
+block|{
+name|val
+operator|=
+literal|""
+expr_stmt|;
+block|}
+return|return
+name|val
+operator|.
+name|trim
+argument_list|()
 return|;
 block|}
 specifier|public
