@@ -1685,6 +1685,17 @@ name|DESCRIPTION
 condition|)
 block|{
 comment|//make sure we don't interpret any tag while in description tag
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"<"
+operator|+
+name|qName
+operator|+
+literal|">"
+argument_list|)
+expr_stmt|;
 return|return;
 block|}
 if|else if
@@ -1803,6 +1814,12 @@ expr_stmt|;
 name|state
 operator|=
 name|DESCRIPTION
+expr_stmt|;
+name|buffer
+operator|=
+operator|new
+name|StringBuffer
+argument_list|()
 expr_stmt|;
 block|}
 if|else if
@@ -5586,6 +5603,30 @@ name|qName
 argument_list|)
 condition|)
 block|{
+name|getMd
+argument_list|()
+operator|.
+name|setDescription
+argument_list|(
+name|buffer
+operator|==
+literal|null
+condition|?
+literal|""
+else|:
+name|buffer
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|=
+literal|null
+expr_stmt|;
 name|state
 operator|=
 name|INFO
@@ -5625,6 +5666,65 @@ name|state
 operator|=
 name|INFO
 expr_stmt|;
+block|}
+if|else if
+condition|(
+name|state
+operator|==
+name|DESCRIPTION
+condition|)
+block|{
+if|if
+condition|(
+name|buffer
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|endsWith
+argument_list|(
+literal|"<"
+operator|+
+name|qName
+operator|+
+literal|">"
+argument_list|)
+condition|)
+block|{
+name|buffer
+operator|.
+name|deleteCharAt
+argument_list|(
+name|buffer
+operator|.
+name|length
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"/>"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|"</"
+operator|+
+name|qName
+operator|+
+literal|">"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 specifier|private
