@@ -3725,6 +3725,101 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testHomeAndDescription
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|PomModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|settings
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"mule-1.3.3.pom"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org.mule"
+argument_list|,
+literal|"mule"
+argument_list|,
+literal|"1.3.3"
+argument_list|)
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"http://mule.mulesource.org"
+argument_list|,
+name|md
+operator|.
+name|getHomePage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Mule is a simple yet robust and highly scalable Integration and ESB services "
+operator|+
+literal|"framework. It is designed\n        as a light-weight, event-driven component "
+operator|+
+literal|"technology that handles communication with disparate systems\n        "
+operator|+
+literal|"transparently providing a simple component interface."
+argument_list|,
+name|md
+operator|.
+name|getDescription
+argument_list|()
+operator|.
+name|replace
+argument_list|(
+literal|"\n\r"
+argument_list|,
+literal|"\n"
+argument_list|)
+operator|.
+name|replace
+argument_list|(
+literal|"\r"
+argument_list|,
+literal|"\n"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testDependencyManagment
 parameter_list|()
 throws|throws
