@@ -1595,6 +1595,34 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
+literal|"This module is<b>great</b> !<br/>\n\t"
+operator|+
+literal|"You can use it especially with myconf1 and myconf2, "
+operator|+
+literal|"and myconf4 is not too bad too."
+argument_list|,
+name|md
+operator|.
+name|getDescription
+argument_list|()
+operator|.
+name|replace
+argument_list|(
+literal|"\n\r"
+argument_list|,
+literal|"\n"
+argument_list|)
+operator|.
+name|replace
+argument_list|(
+literal|"\r"
+argument_list|,
+literal|"\n"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
 literal|1
 argument_list|,
 name|md
